[project]
name = "bitbucket-mcp"
version = "0.1.0"
description = "MCP server for Bitbucket pipeline operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.7.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
]
