[project]
name = "mcp-client"
version = "0.1.0"
description = "Production-ready MCP client with conversation memory, model switching, and observability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "langchain-ollama>=0.3.2",
    "loguru>=0.7.3",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.7.1",
    # Configuration management
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.0",
    # Database (optional)
    "asyncpg>=0.30.0",
    # Metrics
    "prometheus-client>=0.21.1",
]
